# MeshMind

./: README.md  pyproject.toml  requirements.txt
src/api/: main.py
src/api/models/: requests.py  responses.py
src/api/routes/: health.py  indexes.py  ingestion.py  query.py
src/core/: config.py  embeddings.py  ingestion.py  retrieval.py  vectorstore.py
src/utils/: jobs.py  parser.py  scraper.py
